# tre

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  get-mnist.h  model-creator.py
include/: geometry.hpp  geometry_approx.hpp  graphics.hpp  misc.hpp  point.hpp  stopwatch.hpp
include/dataset/: dataset.hpp  mnist.hpp
include/geometry/: centroid.hpp  point.hpp
include/geometry/point/: point_aligned.hpp  point_centroid.hpp  point_distance.hpp  point_operators.hpp
include/graphics/: bezier.hpp  color.hpp  drawing-functions.hpp  graphics.hpp  lock-free-vector.hpp  point.hpp  rectangle.hpp  window.hpp
include/image/: image.hpp  transform.hpp
include/models/: bezier.hpp  model-reader.hpp  model.hpp
include/point/: point.hpp  point_aligned.hpp  point_distance.hpp  point_operators.hpp
include/xfloat/: xfloat.hpp
models/: otto
src/dataset/: mnist.cpp
src/graphics/: bezier.cpp  color.cpp  drawing-functions.cpp  point.cpp  rectangle.cpp  window-thread.cpp  window.cpp
src/image/: image.cpp  transform.cpp
src/interface/: example.cpp  graphics_test.cpp  image_test.cpp  point_test.cpp
src/models/: bezier.cpp  model.cpp
src/point/: centroid.cpp  point.cpp
